--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,27 @@
 
+* {
+  box-sizing: border-box;
+  }
 
-    .crystal-images {
-      width: 300px;
-      height: 300px;
-      background: black;
-      /*padding: 5px;*/
+
+body {
+	background: lightblue;
+}
+
+#header {
+	text-align: center;
+	margin-bottom: 5px;
+}	
+
+.crystal-images {
+    width: 500px;
+    height: 250px;
+    margin-left: 20px;
+    margin-top: 20px;
+    position: relative;
+    left: 70px;
+    border-image: grey;
+	
+
+            
   }
