--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,19 +8,62 @@ body {
 	background: lightblue;
 }
 
-#header {
+#header1 {
+	background: #cc99ff;
+	border: 3px solid #ddd; 
+	width: 350px;
 	text-align: center;
-	margin-bottom: 5px;
-	background: lightgray;
-}	
+	float: left;
+	position: relative;
+	left: 50px;
+	font-weight: bold;
+	
+}
+
+#header2 {
+	background: #cc99ff;
+	border: 3px solid #ddd; 
+	width: 350px;
+	text-align: center;
+	float: left;
+	position: relative;
+	left: 100px;
+	
+}
+
+#header3 {
+	position: relative;
+	background: #cc99ff;
+	border: 3px solid #ddd; 
+	text-align: center;
+	float: left;
+	width: 200px;
+	left: 115px;
+}
+
+#header4 {
+	background: #cc99ff;
+	border: 3px solid #ddd; 
+	text-align: center;
+	float: right;
+	width: 200px;
+	position: relative;
+	right: 50px;
+}
+
+#crystals {
+	clear: both;
+}
+
 
 .crystal-images {
+	clear: both;
     width: 500px;
     height: 250px;
-    margin-left: 20px;
-    margin-top: 20px;
+    margin-left: 15px;
+    margin-top: 15px;
     position: relative;
-    left: 70px;
+    left: 100px;
     border: 3px solid #ddd; 
 
 	
